# human_reflex

./: .gitignore  README.md  pyproject.toml
backend/: app.py  camera.py  config.py  gestures.py  player.py  server.py  session.py
backend/games/: base.py  goalie.py  laser_limbo.py  pose_simon.py  touch_circle.py
backend/pose/: engine.py  types.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  theme.ts  types.ts  ws.ts
frontend/src/components/: CameraStream.tsx  FlashOverlay.tsx  GestureRing.tsx  ParticleBurst.tsx  PlayerHalf.tsx  Skeleton.tsx  StatusBar.tsx
frontend/src/games/: GoalieCanvas.tsx  LaserLimboCanvas.tsx  PoseSimonCanvas.tsx  TouchCircleCanvas.tsx
frontend/src/screens/: CountdownScreen.tsx  GameScreen.tsx  IntermissionScreen.tsx  LeaderboardScreen.tsx  SummaryScreen.tsx  TitleScreen.tsx
kiosk/: human-reflex.service  start.sh
scripts/: download_model.py
tests/: test_gestures.py  test_goalie.py  test_laser_limbo.py  test_player.py  test_pose_simon.py  test_session.py  test_touch_circle.py
