[project]
name = "human-reflex"
version = "0.1.0"
description = "Two-player pose-driven reflex game for kiosk deployment"
requires-python = ">=3.11"
dependencies = [
  "ultralytics>=8.3.0",
  "openvino>=2024.4",
  "opencv-python>=4.10.0",
  "numpy>=1.26",
  "aiohttp>=3.10",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
